@@ -2,6 +2,7 @@ xserver-xorg-video-intel (2:2.17.0+git20120104-1) UNRELEASED; urgency=low
 
   * New upstream snapshot:
     - Merge from upstream master up to 4119e68fb1.
+  * Implement a generate-snapshot rule to ease packaging snapshots.
 
  -- Cyril Brulebois <kibi@debian.org>  Wed, 04 Jan 2012 21:59:03 +0100
 
